--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#58ae6b</color>
+    <color name="colorPrimaryDark">#488252</color>
+    <color name="colorAccent">#5bd296</color>
+    <color name="white_text">#FFF</color>
+    <color name="white">#FFF</color>
+    <color name="white_translucent_light">#66FFFFFF</color>
+    <color name="white_translucent_dark">#99FFFFFF</color>
 </resources>
