--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,6 +33,7 @@
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:src="@drawable/logo_reverse"
             android:transitionName="@string/transition_logo_splash" />
