--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#58ae6b</color>
-    <color name="colorPrimaryDark">#488252</color>
-    <color name="colorAccent">#5bd296</color>
+    <color name="colorPrimary">#ED5E32</color>
+    <color name="colorPrimaryDark">#D45129</color>
+    <color name="colorAccent">#FF9B07</color>
     <color name="white_text">#FFF</color>
     <color name="white">#FFF</color>
     <color name="white_translucent_light">#66FFFFFF</color>
     <color name="white_translucent_dark">#99FFFFFF</color>
+
+    <color name="wall">#fff5f5f5</color>
+    <color name="secondary_text">#757575</color>
+    <color name="primary_text">#444444</color>
+    <color name="ripple_light_grey">#77bbbbbb</color>
 </resources>
